[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://hud/fonts/Wexville.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/MenuMusic.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -48.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "The Dungeon 
Labyrinth"
align = 1
autowrap = true

[node name="PlayButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 163.0
margin_top = -62.0
margin_right = -88.0
margin_bottom = -17.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="QuitButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 374.0
margin_top = -217.0
margin_right = 11.0
margin_bottom = -178.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "X"

[node name="GameOverMessageTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
autoplay = true
bus = "Music"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="GameOverMessageTimer" to="." method="_on_GameOverMessageTimer_timeout"]
